# goods_find

./: .dockerignore  .env.development  .env.production  .env.test  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  config.json  docker-compose.yaml  pyproject.toml  requirements.txt  spider_v2.py  start.sh  test_price_matching.py
docs/: bugfix-orphan-process.md
jsonl/: 科比手办_full_data.jsonl
migrations/: 001_add_evaluation_fields.py
prompts/: default_criteria.txt  科比手办_criteria.txt
src/: app.py  scraper.py  scraper_mercari.py  utils.py
state/: shajunyi.json
tests/: conftest.py  test_api_accounts_routes.py  test_api_alerts_routes.py  test_api_auth.py  test_api_bargain.py  test_api_dashboard.py  test_api_favorites.py  test_api_history.py  test_api_inventory.py  test_api_logs.py  test_api_platforms.py  test_api_price_book.py  test_api_pricing.py  test_api_profit.py  test_api_prompts.py  test_api_purchases.py  test_api_results.py  test_api_roi.py  test_api_settings_routes.py  test_api_smart_pricing.py  test_api_team.py  test_api_websocket_event.py  test_bargain_service.py  test_cross_platform.py  test_defect_detection_service.py  test_item_repository.py  test_json_to_sqlite_migration.py  test_mercari_scraper.py  test_platform.py  test_platform_flow.py  test_price_book_service.py  test_roi_service.py  test_seller_credit_service.py  test_smart_pricing_service.py  test_sqlite_login_state_repo.py  test_sqlite_market_price_repo.py  test_sqlite_thresholds_repo.py  test_state_sync.py
web-ui/: index.html  package.json  pnpm-config.json  (+3 more)
(+241 files in other folders)
